--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "axios": "^1.6.7",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
