--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 REACT_APP_API_TOKEN=your_api_token_here
 REACT_APP_API_HOST=http://localhost:1337
 REACT_APP_API_URL=http://localhost:1337/api
+REACT_APP_PUBLIC_STRIPE_KEY=your_stripe_key_here
