--- a/api/.env.example
+++ b/api/.env.example
@@ -5,3 +5,5 @@ API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
+STRIPE_SECRET_KEY=tobemodified
+CLIENT_URL=https://yourdomain.com
